--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,3 +1,11 @@
+
+body{
+  padding: 0px;
+  margin: 0px;
+  position: relative;
+
+}
+
 .Container-logo { 
     display: inline-block;
     height: 50px;
@@ -7,13 +15,7 @@
 
 
 
-.Contedor-Cards{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    align-items: center;
-    margin-left: 2.5rem;
-}
+
 
 
 /*VIDEO DE TRAILER*/
@@ -24,3 +26,30 @@
     object-fit: cover;
 }
 
+.swiper-container {
+  height: 400px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.swiper-slide img{
+  object-fit:cover;
+  width: 100%;
+  height:  100%;
+  object-position: top center;
+  opacity: .5;
+}
+
+
+.swiper-button-next, .swiper-button-prev {
+  color: rgb(237 108 2); /* Cambia el color según tus necesidades */
+  font-size: 18px; /* Tamaño de fuente */
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
