--- a/src/components/index.css
+++ b/src/components/index.css
@@ -2,18 +2,19 @@
 body{
   padding: 0px;
   margin: 0px;
-  position: relative;
 
 }
 
 .Container-logo { 
-    display: inline-block;
-    height: 50px;
+    display: block;
+    height: 40px;
     border-radius: 50%;
     margin-right: 1rem;
 }
 
-
+.content-button Button{
+  margin-left: .8rem;
+}
 
 
 
