--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -23,3 +23,11 @@
   padding-left: 4%;
   padding-right: 4%;
 }  
+
+
+.Gradient-SignUp{
+  background-color: #FAD961;
+  background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+  
+
+}
